feat: change&add preloader on all page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body data-page="home">
     <div id="preloader">
         <div class="loader"></div>
+        <p class="text-demi-24-l5">Loading...</p>
     </div>
     <header>
         <nav>
@@ -155,8 +156,7 @@
             <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
         </div>
     </footer>
-    <script src="./js/preloader.js"></script>
+    <script type="module" src="./js/main.js"></script>
     <script type="module" src="./js/home/main.js"></script>
-    <script src="./js/separators.js"></script>
 </body>
 </html>
