--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -8,6 +8,10 @@
     <title>Gallery</title>
 </head>
 <body data-page="gallery">
+    <div id="preloader">
+        <div class="loader"></div>
+        <p class="text-demi-24-l5">Loading...</p>
+    </div>
     <header>
         <nav>
             <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
@@ -108,6 +112,6 @@
         </div>
     </footer>
     <script type="module" src="../../js/gallery/main.js"></script>
-    <script src="../../js/separators.js"></script>
+    <script type="module" src="../../js/main.js"></script>
 </body>
 </html>
