--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -9,6 +9,10 @@
     <title>profile</title>
 </head>
 <body data-page="profile">
+    <div id="preloader">
+        <div class="loader"></div>
+        <p class="text-demi-24-l5">Loading...</p>
+    </div>
     <header>
         <nav>
             <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
@@ -190,6 +194,6 @@
         </div>
     </footer>
     <script type="module" src="../../js/profile/main.js"></script>
-    <script src="../../js/separators.js"></script>
+    <script type="module" src="../../js/main.js"></script>
 </body>
 </html>
