--- a/pages/FAQ/FAQ.html
+++ b/pages/FAQ/FAQ.html
@@ -8,6 +8,10 @@
     <title>FAQ</title>
 </head>
 <body data-page="FAQ">
+    <div id="preloader">
+        <div class="loader"></div>
+        <p class="text-demi-24-l5">Loading...</p>
+    </div>
     <header>
         <nav>
             <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
@@ -93,6 +97,6 @@
         </div>
     </footer>
     <script type="module" src="../../js/FAQ/main.js"></script>
-    <script src="../../js/separators.js"></script>
+    <script type="module" src="../../js/main.js"></script>
 </body>
 </html>
