--- a/pages/contacts/contacts.html
+++ b/pages/contacts/contacts.html
@@ -8,6 +8,10 @@
     <title>Contact</title>
 </head>
 <body data-page="contact">
+    <div id="preloader">
+        <div class="loader"></div>
+        <p class="text-demi-24-l5">Loading...</p>
+    </div>
     <header>
         <nav>
             <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
@@ -109,7 +113,7 @@
             <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
         </div>
     </footer>
+    <script type="module" src="../../js/main.js"></script>
     <script type="module" src="../../js/contacts/main.js"></script>
-    <script src="../../js/separators.js"></script>
 </body>
 </html>
