--- a/pages/services/services.html
+++ b/pages/services/services.html
@@ -8,6 +8,10 @@
     <title>services</title>
 </head>
 <body data-page="services">
+    <div id="preloader">
+        <div class="loader"></div>
+        <p class="text-demi-24-l5">Loading...</p>
+    </div>
     <header>
         <nav>
             <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
@@ -124,6 +128,6 @@
             <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
     </footer>
     <script type="module" src="../../js/services/main.js"></script>
-    <script src="../../js/separators.js"></script>
+    <script type="module" src="../../js/main.js"></script>
 </body>
 </html>
