fix: correct select on page gallery and move files

--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -75,7 +75,14 @@
             <div class="request-service-box">
                 <div class="request-service-box-service">
                     <p class="text-demi-s16-l5">choose a service</p>
-                    <div class="future-select"></div> 
+                    <div class="select future-select" id="service">
+                        <p class="text-demi-s16-l5 option-select">service</p>
+                        <img src="../../assets/icons/arrow.svg" alt="">
+                        <div class="select-option">
+                            <p>1</p>
+                            <p>2</p>
+                        </div>
+                    </div>
                 </div>
                 <textarea class="question-box-message" placeholder="Question about design, tuning, etc."></textarea>    
                 <div class="request-service-box-buttons"> 
