feat: add i18n (translate page) without toggle

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body data-page="home">
     <div id="preloader">
         <div class="loader"></div>
-        <p class="text-demi-24-l5">Loading...</p>
+        <p class="text-demi-24-l5" data-i18n-common="preloader">Loading...</p>
     </div>
     <header>
         <nav>
-            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
-                <p class="text-medium-30" >Our services</p>
+            <a href="/pages/services/services.html" class="half">
+                <p class="text-medium-30" data-i18n-common="header.menu.services">Our services</p>
                 <span></span>
             </a>
             <a href="/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
@@ -32,19 +32,19 @@
     <main>
         <section class="preview">
             <img src="./assets/images/car.svg" alt="">
-            <p class="text-bold-150" data-i18n="prev.up">CAR MUSC</p>
+            <p class="text-bold-150" data-i18n="preview.upText">CAR MUSC</p>
             <div class="separators"></div>
-            <p class="text-medium-36" data-i18n="prev.down">Car detailing: perfect cleanliness and body protection. Trust us to take care of your car!</p>
-            <a href="" class="half" data-i18n-common="header.button">
-                <p class="text-medium-30-l5" data-i18n="prev.button">OUR SERVICE</p>
+            <p class="text-medium-36" data-i18n="preview.downText">Car detailing: perfect cleanliness and body protection. Trust us to take care of your car!</p>
+            <a href="" class="half">
+                <p class="text-medium-30-l5" data-i18n="preview.button">OUR SERVICE</p>
                 <span></span>
             </a>
         </section>
         <section class="steps">
             <div class="steps-text">
-                <p class="text-demi-s50-h70-l5">from the Russian Cup<br>to the World Championships</p>
+                <p class="text-demi-s50-h70-l5" data-i18n="steps.text.upText">from the Russian Cup<br>to the World Championships</p>
                 <div class="separators"></div>
-                <p class="text-medium-36">We are proud to have achieved significant success in the world of car detailing. Here are five key achievements that highlight our expertise and dedication</p>
+                <p class="text-medium-36" data-i18n="steps.text.downText">We are proud to have achieved significant success in the world of car detailing. Here are five key achievements that highlight our expertise and dedication</p>
             </div>
             <div class="steps-box">
                 <div class="paggination"></div>
@@ -61,11 +61,11 @@
         </section>
         <section class="services">
             <div class="text-section">
-                <p class="text-demi-52-l5">our services</p>
+                <p class="text-demi-52-l5" data-i18n-common="services.header.textOur">our services</p>
                 <div class="separators"></div>
                 <div class="services-filter">
-                    <button class="text-demi-32-l5" data-target="pasting">pasting</button>
-                    <button class="text-demi-32-l5" data-target="detailing">detailing</button>
+                    <button class="text-demi-32-l5" data-i18n-common="services.header.pasting" data-target="pasting">pasting</button>
+                    <button class="text-demi-32-l5" data-i18n-common="services.header.detailing" data-target="detailing">detailing</button>
                     <div class="filter-background"></div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
         </section>
         <section class="our-work">
             <div class="text-section">
-                <p class="text-demi-52-l5">our work</p>
+                <p class="text-demi-52-l5" data-i18n-common="our-work.header">our work</p>
                 <div class="separators"></div>
             </div>
             <div class="our-work-box">
@@ -95,19 +95,19 @@
                 <img src="./assets/images/work7.svg" alt="">
                 <img src="./assets/images/work8.svg" alt="">
             </div>
-        </section>
+        </section>  
         <section class="question">
             <div class="text-section">
-                <p class="text-demi-52-l5">we will answer any question</p>
+                <p class="text-demi-52-l5" data-i18n-common="question.header">we will answer any question</p>
                 <div class="separators"></div>
             </div>
             <div class="question-box">
                 <div>
-                    <input type="text" placeholder="name">
-                    <input type="text" placeholder="phone">
+                    <input type="text" placeholder="name" data-i18n-common="question.placeholder.name">
+                    <input type="text" placeholder="phone" data-i18n-common="question.placeholder.phone">
                 </div>
                 <div>
-                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc."></textarea>    
+                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc." data-i18n-common="question.placeholder.quest"></textarea>    
                     <div class="question-social">
                         <a href="" class="icon-container">
                             <img src="./assets/icons/telegram.svg" alt="">
@@ -120,40 +120,38 @@
                         </a>
                     </div>
                     <button class="half">
-                        <p class="text-medium-30-l5" data-i18n="prev.button">SEND</p>
+                        <p class="text-medium-30-l5" data-i18n-common="question.send">SEND</p>
                         <span></span>
                     </button>
                     <div class="question-contact">
                         <span>
                             <img src="./assets/icons/place.svg" alt="">
-                            <p class="text-demi-s16-l5">1 Lenin Street, Minsk, Belarus, 220030</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.place">1 Lenin Street, Minsk, Belarus, 220030</p>
                         </span>
                         <span>
                             <img src="./assets/icons/phone.svg" alt="">
-                            <p class="text-demi-s16-l5">+375 (33) 251-66-14</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.phone">+375 (33) 251-66-14</p>
                         </span>
                         <span>
                             <img src="./assets/icons/pochta.svg" alt="">
-                            <p class="text-demi-s16-l5">carmusc@carmusc.ru</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.pochta">carmusc@carmusc.ru</p>
                         </span>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- это главная
-        <a href="./pages/authorization/authorization.html">авторизая</a> -->
     </main>
     <footer>
-        <p class="text-demi-s16-h24-l5">2025 © Detailing Workshop. All rights reserved.</p>
+        <p class="text-demi-s16-h24-l5" data-i18n-common="footer.root">2025 © Detailing Workshop. All rights reserved.</p>
         <div class="nav">
-            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
-                <p class="text-medium-30" >Our services</p>
+            <a href="/pages/services/services.html" class="half">
+                <p class="text-medium-30" data-i18n-common="footer.menu.services">Our services</p>
                 <span></span>
             </a>
-            <a href="/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
-            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
-            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
-            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href="/index.html" class="text-medium-30" data-i18n-common="footer.menu.home">Home</a>
+            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="footer.menu.gallery">Gallery of works</a>
+            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="footer.menu.contacts">Contacts</a>
+            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="footer.menu.FAQ">FAQ</a>
         </div>
     </footer>
     <script type="module" src="./js/main.js"></script>
