--- a/pages/contacts/contacts.html
+++ b/pages/contacts/contacts.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="stylesheet" href="./contacts.css">
-    <title>Contact</title>
+    <title data-i18n="title">Contacts</title>
 </head>
-<body data-page="contact">
+<body data-page="contacts">
     <div id="preloader">
         <div class="loader"></div>
-        <p class="text-demi-24-l5">Loading...</p>
+        <p class="text-demi-24-l5" data-i18n-common="preloader">Loading...</p>
     </div>
     <header>
         <nav>
-            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
-                <p class="text-medium-30" >Our services</p>
+            <a href="/pages/services/services.html" class="half">
+                <p class="text-medium-30" data-i18n-common="header.menu.services">Our services</p>
                 <span></span>
             </a>
             <a href= "/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
@@ -32,9 +32,9 @@
     <main>
         <section class="map">
             <div class="map-text">
-                <p class="text-demi-s50-h70-l5">Professional car detailing and wrapping</p>
+                <p class="text-demi-s50-h70-l5" data-i18n="map.textUp">Professional car detailing and wrapping</p>
                 <div class="separators"></div>
-                <p class="text-medium-36">We are a team of professionals who turn your car into an ideal. We specialize in high-quality detailing and premium decal, using only proven materials and technologies</p>
+                <p class="text-medium-36" data-i18n="map.textDown">We are a team of professionals who turn your car into an ideal. We specialize in high-quality detailing and premium decal, using only proven materials and technologies</p>
             </div>
             <div class="map-container" style="position:relative;overflow:hidden;">
                 <a href="https://yandex.by/maps/157/minsk/house/Zk4YcwFhTUYBQFtpfXR4eXtrZg==/?ll=27.561610%2C53.898636&utm_medium=mapframe&utm_source=maps&z=15.2" style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Ленина, 15 — Яндекс Карты</a>
@@ -43,30 +43,30 @@
         </section>
         <section class="contact">
             <div class="contact-item">
-                <p class="text-demi-30-l5">address</p>
-                <p class="text-demi-s24-h30-l5">ул. Ленина, 15, Минск, 220030,<br>Беларусь</p>
+                <p class="text-demi-30-l5" data-i18n="contact.addressHeader">address</p>
+                <p class="text-demi-s24-h30-l5" data-i18n="contact.address">15 Lenin Street, Minsk, 220030,<br>Belarus</p>
             </div>
             <div class="contact-item">
-                <p class="text-demi-30-l5">telephone</p>
+                <p class="text-demi-30-l5" data-i18n="contact.telephoneHeader">telephone</p>
                 <p class="text-demi-s24-h30-l5">+375 (33) 666-43-43<br>+375 (29) 666-43-43</p>
             </div>
             <div class="contact-item">
-                <p class="text-demi-30-l5">Working hours</p>
-                <p class="text-demi-s24-h30-l5">mn - fr : 07:00 - 23:00<br>st - sn : 08:00 - 22:00</p>
+                <p class="text-demi-30-l5" data-i18n="contact.hoursHeader">Working hours</p>
+                <p class="text-demi-s24-h30-l5" data-i18n="contact.hours">mn - fr : 07:00 - 23:00<br>st - sn : 08:00 - 22:00</p>
             </div>
         </section>  
         <section class="question">
             <div class="text-section">
-                <p class="text-demi-52-l5">we will answer any question</p>
+                <p class="text-demi-52-l5" data-i18n-common="question.header">we will answer any question</p>
                 <div class="separators"></div>
             </div>
             <div class="question-box">
                 <div>
-                    <input type="text" placeholder="name">
-                    <input type="text" placeholder="phone">
+                    <input type="text" placeholder="name" data-i18n-common="question.placeholder.name">
+                    <input type="text" placeholder="phone" data-i18n-common="question.placeholder.phone">
                 </div>
                 <div>
-                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc."></textarea>    
+                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc." data-i18n-common="question.placeholder.quest"></textarea>    
                     <div class="question-social">
                         <a href="" class="icon-container">
                             <img src="../../assets/icons/telegram.svg" alt="">
@@ -79,21 +79,21 @@
                         </a>
                     </div>
                     <button class="half">
-                        <p class="text-medium-30-l5" data-i18n="prev.button">SEND</p>
+                        <p class="text-medium-30-l5" data-i18n-common="question.send">SEND</p>
                         <span></span>
                     </button>
                     <div class="question-contact">
                         <span>
                             <img src="../../assets/icons/place.svg" alt="">
-                            <p class="text-demi-s16-l5">1 Lenin Street, Minsk, Belarus, 220030</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.place">1 Lenin Street, Minsk, Belarus, 220030</p>
                         </span>
                         <span>
                             <img src="../../assets/icons/phone.svg" alt="">
-                            <p class="text-demi-s16-l5">+375 (33) 251-66-14</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.phone">+375 (33) 251-66-14</p>
                         </span>
                         <span>
                             <img src="../../assets/icons/pochta.svg" alt="">
-                            <p class="text-demi-s16-l5">carmusc@carmusc.ru</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.pochta">carmusc@carmusc.ru</p>
                         </span>
                     </div>
                 </div>
@@ -101,16 +101,16 @@
         </section>
     </main>
     <footer>
-        <p class="text-demi-s16-h24-l5">2025 © Detailing Workshop. All rights reserved.</p>
+        <p class="text-demi-s16-h24-l5" data-i18n-common="footer.root">2025 © Detailing Workshop. All rights reserved.</p>
         <div class="nav">
-            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
-                <p class="text-medium-30" >Our services</p>
+            <a href="/pages/services/services.html" class="half">
+                <p class="text-medium-30" data-i18n-common="footer.menu.services">Our services</p>
                 <span></span>
             </a>
-            <a href="/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
-            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
-            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
-            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href="/index.html" class="text-medium-30" data-i18n-common="footer.menu.home">Home</a>
+            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="footer.menu.gallery">Gallery of works</a>
+            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="footer.menu.contacts">Contacts</a>
+            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="footer.menu.FAQ">FAQ</a>
         </div>
     </footer>
     <script type="module" src="../../js/main.js"></script>
