--- a/pages/FAQ/FAQ.html
+++ b/pages/FAQ/FAQ.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="stylesheet" href="./FAQ.css">
-    <title>FAQ</title>
+    <title data-i18n="title">FAQ</title>
 </head>
 <body data-page="FAQ">
     <div id="preloader">
         <div class="loader"></div>
-        <p class="text-demi-24-l5">Loading...</p>
+        <p class="text-demi-24-l5" data-i18n-common="preloader">Loading...</p>
     </div>
     <header>
         <nav>
-            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
-                <p class="text-medium-30" >Our services</p>
+            <a href="/pages/services/services.html" class="half">
+                <p class="text-medium-30" data-i18n-common="header.menu.services">Our services</p>
                 <span></span>
             </a>
             <a href= "/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
@@ -32,7 +32,7 @@
     <main>
         <section class="answer">
             <div class="text-section">
-                <p class="text-demi-52-l5">Frequently Asked Questions</p>
+                <p class="text-demi-52-l5" data-i18n="answer.header">Frequently Asked Questions</p>
                 <div class="separators"></div>
             </div>
             <div class="answer-box"></div>
@@ -40,16 +40,16 @@
         </section>
         <section class="question">
             <div class="text-section">
-                <p class="text-demi-52-l5">we will answer any question</p>
+                <p class="text-demi-52-l5" data-i18n-common="question.header">we will answer any question</p>
                 <div class="separators"></div>
             </div>
             <div class="question-box">
                 <div>
-                    <input type="text" placeholder="name">
-                    <input type="text" placeholder="phone">
+                    <input type="text" placeholder="name" data-i18n-common="question.placeholder.name">
+                    <input type="text" placeholder="phone" data-i18n-common="question.placeholder.phone">
                 </div>
                 <div>
-                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc."></textarea>    
+                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc." data-i18n-common="question.placeholder.quest"></textarea>    
                     <div class="question-social">
                         <a href="" class="icon-container">
                             <img src="../../assets/icons/telegram.svg" alt="">
@@ -62,21 +62,21 @@
                         </a>
                     </div>
                     <button class="half">
-                        <p class="text-medium-30-l5" data-i18n="prev.button">SEND</p>
+                        <p class="text-medium-30-l5" data-i18n-common="question.send">SEND</p>
                         <span></span>
                     </button>
                     <div class="question-contact">
                         <span>
                             <img src="../../assets/icons/place.svg" alt="">
-                            <p class="text-demi-s16-l5">1 Lenin Street, Minsk, Belarus, 220030</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.place">1 Lenin Street, Minsk, Belarus, 220030</p>
                         </span>
                         <span>
                             <img src="../../assets/icons/phone.svg" alt="">
-                            <p class="text-demi-s16-l5">+375 (33) 251-66-14</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.phone">+375 (33) 251-66-14</p>
                         </span>
                         <span>
                             <img src="../../assets/icons/pochta.svg" alt="">
-                            <p class="text-demi-s16-l5">carmusc@carmusc.ru</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.pochta">carmusc@carmusc.ru</p>
                         </span>
                     </div>
                 </div>
@@ -84,16 +84,16 @@
         </section>
     </main>
     <footer>
-        <p class="text-demi-s16-h24-l5">2025 © Detailing Workshop. All rights reserved.</p>
+        <p class="text-demi-s16-h24-l5" data-i18n-common="footer.root">2025 © Detailing Workshop. All rights reserved.</p>
         <div class="nav">
-            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
-                <p class="text-medium-30" >Our services</p>
+            <a href="/pages/services/services.html" class="half">
+                <p class="text-medium-30" data-i18n-common="footer.menu.services">Our services</p>
                 <span></span>
             </a>
-            <a href="/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
-            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
-            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
-            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href="/index.html" class="text-medium-30" data-i18n-common="footer.menu.home">Home</a>
+            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="footer.menu.gallery">Gallery of works</a>
+            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="footer.menu.contacts">Contacts</a>
+            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="footer.menu.FAQ">FAQ</a>
         </div>
     </footer>
     <script type="module" src="../../js/FAQ/main.js"></script>
