--- a/pages/services/services.html
+++ b/pages/services/services.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="stylesheet" href="./services.css">
-    <title>services</title>
+    <title data-i18n="title">Services</title>
 </head>
 <body data-page="services">
     <div id="preloader">
         <div class="loader"></div>
-        <p class="text-demi-24-l5">Loading...</p>
+        <p class="text-demi-24-l5" data-i18n-common="preloader">Loading...</p>
     </div>
     <header>
         <nav>
-            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
-                <p class="text-medium-30" >Our services</p>
+            <a href="/pages/services/services.html" class="half">
+                <p class="text-medium-30" data-i18n-common="header.menu.services">Our services</p>
                 <span></span>
             </a>
             <a href= "/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
@@ -32,37 +32,37 @@
     <main>
         <section class="services">
             <div class="text-section">
-                <p class="text-demi-52-l5">our services</p>
+                <p class="text-demi-52-l5" data-i18n-common="services.header.textOur">our services</p>
                 <div class="separators"></div>
                 <div class="services-filter">
-                    <button class="text-demi-32-l5" data-target="pasting">pasting</button>
-                    <button class="text-demi-32-l5" data-target="detailing">detailing</button>
+                    <button class="text-demi-32-l5" data-i18n-common="services.header.pasting" data-target="pasting">pasting</button>
+                    <button class="text-demi-32-l5" data-i18n-common="services.header.detailing" data-target="detailing">detailing</button>
                     <div class="filter-background"></div>
                 </div>
             </div>
             <div class="filter-section">
                 <div class="filter-box">
-                    <p class="text-demi-s14-l5">search</p>
+                    <p class="text-demi-s14-l5" data-i18n-common="services.filter.search">search</p>
                     <div class="custom-input">
                         <img src="../../assets/icons/search.svg" alt="">
-                        <input type="text" placeholder="search">
+                        <input type="text" placeholder="search" data-i18n-common="services.placeholder.search">
                         <button id="clear-button" type="button">
                             <img src="../../assets/icons/close.svg" alt="Очистить">
                         </button>
                     </div>
                 </div>
                 <div class="filter-box">
-                    <p class="text-demi-s14-l5">filter</p>
+                    <p class="text-demi-s14-l5" data-i18n-common="services.filter.filter">filter</p>
                     <div class="select" id="filter">
-                        <p class="text-demi-s16-l5 option-select">filter</p>
+                        <p class="text-demi-s16-l5 option-select" data-i18n-common="services.filter.filter">filter</p>
                         <img src="../../assets/icons/arrow.svg" alt="">
                         <div class="select-option"></div>
                     </div>
                 </div>
                 <div class="filter-box">
-                    <p class="text-demi-s14-l5">sort</p>
+                    <p class="text-demi-s14-l5" data-i18n-common="services.filter.sort">sort</p>
                     <div class="select" id="sort">
-                        <p class="text-demi-s16-l5 option-select">sort</p>
+                        <p class="text-demi-s16-l5 option-select" data-i18n-common="services.filter.sort">sort</p>
                         <img src="../../assets/icons/arrow.svg" alt="">
                         <div class="select-option"></div>
                     </div>
@@ -72,16 +72,16 @@
         </section>
         <section class="question">
             <div class="text-section">
-                <p class="text-demi-52-l5">we will answer any question</p>
+                <p class="text-demi-52-l5" data-i18n-common="question.header">we will answer any question</p>
                 <div class="separators"></div>
             </div>
             <div class="question-box">
                 <div>
-                    <input type="text" placeholder="name">
-                    <input type="text" placeholder="phone">
+                    <input type="text" placeholder="name" data-i18n-common="question.placeholder.name">
+                    <input type="text" placeholder="phone" data-i18n-common="question.placeholder.phone">
                 </div>
                 <div>
-                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc."></textarea>    
+                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc." data-i18n-common="question.placeholder.quest"></textarea>    
                     <div class="question-social">
                         <a href="" class="icon-container">
                             <img src="../../assets/icons/telegram.svg" alt="">
@@ -94,21 +94,21 @@
                         </a>
                     </div>
                     <button class="half">
-                        <p class="text-medium-30-l5" data-i18n="prev.button">SEND</p>
+                        <p class="text-medium-30-l5" data-i18n-common="question.send">SEND</p>
                         <span></span>
                     </button>
                     <div class="question-contact">
                         <span>
                             <img src="../../assets/icons/place.svg" alt="">
-                            <p class="text-demi-s16-l5">1 Lenin Street, Minsk, Belarus, 220030</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.place">1 Lenin Street, Minsk, Belarus, 220030</p>
                         </span>
                         <span>
                             <img src="../../assets/icons/phone.svg" alt="">
-                            <p class="text-demi-s16-l5">+375 (33) 251-66-14</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.phone">+375 (33) 251-66-14</p>
                         </span>
                         <span>
                             <img src="../../assets/icons/pochta.svg" alt="">
-                            <p class="text-demi-s16-l5">carmusc@carmusc.ru</p>
+                            <p class="text-demi-s16-l5" data-i18n-common="question.contact.pochta">carmusc@carmusc.ru</p>
                         </span>
                     </div>
                 </div>
@@ -116,16 +116,17 @@
         </section>
     </main>
     <footer>
-        <p class="text-demi-s16-h24-l5">2025 © Detailing Workshop. All rights reserved.</p>
+        <p class="text-demi-s16-h24-l5" data-i18n-common="footer.root">2025 © Detailing Workshop. All rights reserved.</p>
         <div class="nav">
-            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
-                <p class="text-medium-30" >Our services</p>
+            <a href="/pages/services/services.html" class="half">
+                <p class="text-medium-30" data-i18n-common="footer.menu.services">Our services</p>
                 <span></span>
             </a>
-            <a href="/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
-            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
-            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
-            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href="/index.html" class="text-medium-30" data-i18n-common="footer.menu.home">Home</a>
+            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="footer.menu.gallery">Gallery of works</a>
+            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="footer.menu.contacts">Contacts</a>
+            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="footer.menu.FAQ">FAQ</a>
+        </div>
     </footer>
     <script type="module" src="../../js/services/main.js"></script>
     <script type="module" src="../../js/main.js"></script>
