--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -82,8 +82,8 @@
                                 <p class="text-demi-s16-l5 option-select" data-i18n="personal.text.language">language</p>
                                 <img src="../../assets/icons/arrow.svg" alt="">
                                 <div class="select-option">
-                                    <p>1</p>
-                                    <p>2</p>
+                                    <p class="text-demi-s20-h30-l5 option" data-i18n="personal.text.russian" data-target="ru">russian</p>
+                                    <p class="text-demi-s20-h30-l5 option" data-i18n="personal.text.english" data-target="en">english</p>
                                 </div>
                             </div>
                         </div>
