feat: add button for clear localstorage

--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -54,7 +54,7 @@
                     <p class="text-demi-30-l5" data-i18n="personal.header.everything">reset everything</p>
                     <div>
                         <p class="text-demi-s14-h20-l5" data-i18n="personal.text.reset">By clicking this button, you confirm that you want to reset all settings to their default values. This action is irreversible and will result in the removal of all your personalized settings.</p>
-                        <button class="half">
+                        <button class="half" id="reset">
                             <p class="text-demi-24-l5" data-i18n="personal.button.reset">Reset</p>
                             <span></span>
                         </button>
